--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>rocketmq-first</artifactId>
+    <artifactId>rocketmq-second</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
